# 2.0.0

## Upgrade Instructions

This is a backwards-incompatible release. 

 * Upgrade to PowerShell 3.
 * Remove usages of `Complete-Job`.  We removed it because it was total crap.  Use PowerShell's `Wait-Job` cmdlet instead.
 * [Grant-Permission](http://get-carbon.org/help/Grant-Permission.html) now only grants permissions on an object if those permissions aren't present.  To preserve previous behaviour, add the `-Force` switch to all `Grant-Permission` usages.
 * The following commands now return objects to the pipeline. Depending on your usage, you may need to pipe their output to `Out-Null`, assign their return values to `$null`, or do nothing.
     * [Grant-Permission](http://get-carbon.org/help/Grant-Permission.html)
     * [Install-Group](http://get-carbon.org/help/Install-Group.html)
     * [Install-Junction](http://get-carbon.org/help/Install-Junction.html)
     * [Install-User](http://get-carbon.org/help/Install-User.html)
     * [Grant-ComPermissions](http://get-carbon.org/help/Grant-ComPermissions.html)
 * The following commands no longer return the stdout from various console applications. To see that output, use the `-Verbose` switch. Remove any usage of the output you were procesing.
     * [Disable-FirewallStatefulFtp](http://get-carbon.org/help/Disable-FirewallStatefulFtp.html)
     * [Enable-FirewallStatefulFtp](http://get-carbon.org/help/Enable-FirewallStatefulFtp.html)
     * [Remove-SslCertificateBinding](http://get-carbon.org/help/Remove-SslCertificateBinding.html)
 * [Set-SslCertificateBinding](http://get-carbon.org/help/Set-SslCertificateBinding.html) now returns `Carbon.Certificates.SslCertificateBinding` objects intead of netsh output. Update any code that uses `Set-SslCertificateBinding`'s output.
 * Ensure that all thumbprints passed to [Set-SslCertificateBinding](http://get-carbon.org/help/Set-SslCertificateBinding.html) are valid (40 character hex strings).